COMP2122/l22/l22_parser.output
Terminals unused in grammar

    tPRIVATE
    '@'


State 13 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 87 conflicts: 14 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 159 conflicts: 14 shift/reduce


Grammar

    0 $accept: file $end

    1 file: opt_variable_decls program

    2 program: tBEGIN block tEND

    3 block: '{' opt_variable_decls opt_instructions '}'

    4 var_type: tVAR

    5 variable_decl: qualifier data_type tIDENTIFIER
    6              | data_type tIDENTIFIER
    7              | qualifier data_type tIDENTIFIER '=' expression
    8              | data_type tIDENTIFIER '=' expression
    9              | tFOREIGN var_type tIDENTIFIER '=' expression
   10              | tPUBLIC var_type tIDENTIFIER '=' expression
   11              | var_type tIDENTIFIER '=' expression
   12              | qualifier tIDENTIFIER '=' expression

   13 variable_decl_block: qualifier data_type tIDENTIFIER '=' block_expression
   14                    | data_type tIDENTIFIER '=' block_expression
   15                    | tFOREIGN var_type tIDENTIFIER '=' block_expression
   16                    | tPUBLIC var_type tIDENTIFIER '=' block_expression
   17                    | var_type tIDENTIFIER '=' block_expression
   18                    | qualifier tIDENTIFIER '=' block_expression

   19 variable_decls: variable_decl ';'
   20               | variable_decl ';' variable_decls
   21               | variable_decl_block
   22               | variable_decl_block variable_decls

   23 opt_variable_decls: %empty
   24                   | variable_decls

   25 qualifier: tFOREIGN
   26          | tUSE
   27          | tPUBLIC

   28 data_type: tINT_TYPE
   29          | tREAL_TYPE
   30          | tSTRING_TYPE
   31          | '[' data_type ']'
   32          | func_type

   33 void_type: tVOID_TYPE
   34          | '[' void_type ']'

   35 types: data_type
   36      | types ',' data_type
   37      | types ',' void_type

   38 arg: data_type tIDENTIFIER

   39 args: arg
   40     | args ',' arg

   41 func_def: '(' ')' tARROW data_type ':' block
   42         | '(' args ')' tARROW data_type ':' block
   43         | '(' ')' tARROW tVOID_TYPE ':' block
   44         | '(' args ')' tARROW tVOID_TYPE ':' block

   45 func_type: data_type '<' types '>'
   46          | data_type '<' '>'
   47          | void_type '<' types '>'
   48          | void_type '<' '>'

   49 opt_instructions: %empty
   50                 | instructions

   51 instructions: instruction
   52             | block_instruction
   53             | instruction ';' instructions
   54             | block_instruction instructions

   55 instruction: expression
   56            | tWRITE expressions
   57            | tWRITELN expressions
   58            | tAGAIN
   59            | tSTOP
   60            | tRETURN expression
   61            | tRETURN
   62            | block

   63 block_instruction: tIF expression tTHEN block
   64                  | tIF expression tTHEN block if_false
   65                  | tWHILE '(' expression ')' tDO block
   66                  | block_expression

   67 if_false: tELSE block
   68         | tELIF expression tTHEN block
   69         | tELIF expression tTHEN block if_false

   70 comp_expression: expression
   71                | block_expression

   72 block_expression: func_def

   73 expression: integer
   74           | real
   75           | string
   76           | tNULL
   77           | lvalue
   78           | lvalue '=' comp_expression
   79           | expression '+' expression
   80           | expression '-' expression
   81           | expression '*' expression
   82           | expression '/' expression
   83           | expression '%' expression
   84           | expression '<' expression
   85           | expression tLE expression
   86           | expression tEQ expression
   87           | expression tGE expression
   88           | expression '>' expression
   89           | expression tNE expression
   90           | expression tAND expression
   91           | expression tOR expression
   92           | '-' expression
   93           | '+' expression
   94           | tNOT expression
   95           | tINPUT
   96           | expression '(' opt_expressions ')'
   97           | tSIZEOF '(' expression ')'
   98           | '(' expression ')'
   99           | '[' expression ']'
  100           | lvalue '?'

  101 lvalue: tIDENTIFIER
  102       | lvalue '[' expression ']'
  103       | '(' expression ')' '[' expression ']'
  104       | expression '(' opt_expressions ')' '[' expression ']'

  105 expressions: expression
  106            | expressions ',' expression

  107 opt_expressions: %empty
  108                | expressions

  109 integer: tINTEGER

  110 real: tREAL

  111 string: tSTRING
  112       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 83
    '(' (40) 41 42 43 44 65 96 97 98 103 104
    ')' (41) 41 42 43 44 65 96 97 98 103 104
    '*' (42) 81
    '+' (43) 79 93
    ',' (44) 36 37 40 106
    '-' (45) 80 92
    '/' (47) 82
    ':' (58) 41 42 43 44
    ';' (59) 19 20 53
    '<' (60) 45 46 47 48 84
    '=' (61) 7 8 9 10 11 12 13 14 15 16 17 18 78
    '>' (62) 45 46 47 48 88
    '?' (63) 100
    '@' (64)
    '[' (91) 31 34 99 102 103 104
    ']' (93) 31 34 99 102 103 104
    '{' (123) 3
    '}' (125) 3
    error (256)
    tINTEGER <i> (258) 109
    tREAL <d> (259) 110
    tIDENTIFIER <s> (260) 5 6 7 8 9 10 11 12 13 14 15 16 17 18 38 101
    tSTRING <s> (261) 111 112
    tINT_TYPE (262) 28
    tREAL_TYPE (263) 29
    tSTRING_TYPE (264) 30
    tVOID_TYPE (265) 33 43 44
    tFOREIGN (266) 9 15 25
    tUSE (267) 26
    tPUBLIC (268) 10 16 27
    tVAR (269) 4
    tPRIVATE (270)
    tAND (271) 90
    tOR (272) 91
    tNOT (273) 94
    tIF (274) 63 64
    tTHEN (275) 63 64 68 69
    tELIF (276) 68 69
    tELSE (277) 67
    tWHILE (278) 65
    tDO (279) 65
    tSTOP (280) 59
    tAGAIN (281) 58
    tWRITE (282) 56
    tWRITELN (283) 57
    tRETURN (284) 60 61
    tINPUT (285) 95
    tNULL (286) 76
    tBEGIN (287) 2
    tEND (288) 2
    tSIZEOF (289) 97
    tARROW (290) 41 42 43 44
    tGE (291) 87
    tLE (292) 85
    tEQ (293) 86
    tNE (294) 89
    tUNARY (295)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    file <sequence> (61)
        on left: 1
        on right: 0
    program <node> (62)
        on left: 2
        on right: 1
    block <block> (63)
        on left: 3
        on right: 2 41 42 43 44 62 63 64 65 67 68 69
    var_type <type> (64)
        on left: 4
        on right: 9 10 11 15 16 17
    variable_decl <node> (65)
        on left: 5 6 7 8 9 10 11 12
        on right: 19 20
    variable_decl_block <node> (66)
        on left: 13 14 15 16 17 18
        on right: 21 22
    variable_decls <sequence> (67)
        on left: 19 20 21 22
        on right: 20 22 24
    opt_variable_decls <sequence> (68)
        on left: 23 24
        on right: 1 3
    qualifier <i> (69)
        on left: 25 26 27
        on right: 5 7 12 13 18
    data_type <type> (70)
        on left: 28 29 30 31 32
        on right: 5 6 7 8 13 14 31 35 36 38 41 42 45 46
    void_type <type> (71)
        on left: 33 34
        on right: 34 37 47 48
    types <vector> (72)
        on left: 35 36 37
        on right: 36 37 45 47
    arg <node> (73)
        on left: 38
        on right: 39 40
    args <sequence> (74)
        on left: 39 40
        on right: 40 42 44
    func_def <expression> (75)
        on left: 41 42 43 44
        on right: 72
    func_type <type> (76)
        on left: 45 46 47 48
        on right: 32
    opt_instructions <sequence> (77)
        on left: 49 50
        on right: 3
    instructions <sequence> (78)
        on left: 51 52 53 54
        on right: 50 53 54
    instruction <node> (79)
        on left: 55 56 57 58 59 60 61 62
        on right: 51 53
    block_instruction <node> (80)
        on left: 63 64 65 66
        on right: 52 54
    if_false <node> (81)
        on left: 67 68 69
        on right: 64 69
    comp_expression <expression> (82)
        on left: 70 71
        on right: 78
    block_expression <expression> (83)
        on left: 72
        on right: 13 14 15 16 17 18 66 71
    expression <expression> (84)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 7 8 9 10 11 12 55 60 63 64 65 68 69 70 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 96 97 98 99 102 103 104 105 106
    lvalue <lvalue> (85)
        on left: 101 102 103 104
        on right: 77 78 100 102
    expressions <sequence> (86)
        on left: 105 106
        on right: 56 57 106 108
    opt_expressions <sequence> (87)
        on left: 107 108
        on right: 96 104
    integer <expression> (88)
        on left: 109
        on right: 73
    real <expression> (89)
        on left: 110
        on right: 74
    string <s> (90)
        on left: 111 112
        on right: 75 112


State 0

    0 $accept: . file $end

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    '['           shift, and go to state 9

    $default  reduce using rule 23 (opt_variable_decls)

    file                 go to state 10
    var_type             go to state 11
    variable_decl        go to state 12
    variable_decl_block  go to state 13
    variable_decls       go to state 14
    opt_variable_decls   go to state 15
    qualifier            go to state 16
    data_type            go to state 17
    void_type            go to state 18
    func_type            go to state 19


State 1

   28 data_type: tINT_TYPE .

    $default  reduce using rule 28 (data_type)


State 2

   29 data_type: tREAL_TYPE .

    $default  reduce using rule 29 (data_type)


State 3

   30 data_type: tSTRING_TYPE .

    $default  reduce using rule 30 (data_type)


State 4

   33 void_type: tVOID_TYPE .

    $default  reduce using rule 33 (void_type)


State 5

    9 variable_decl: tFOREIGN . var_type tIDENTIFIER '=' expression
   15 variable_decl_block: tFOREIGN . var_type tIDENTIFIER '=' block_expression
   25 qualifier: tFOREIGN .

    tVAR  shift, and go to state 8

    $default  reduce using rule 25 (qualifier)

    var_type  go to state 20


State 6

   26 qualifier: tUSE .

    $default  reduce using rule 26 (qualifier)


State 7

   10 variable_decl: tPUBLIC . var_type tIDENTIFIER '=' expression
   16 variable_decl_block: tPUBLIC . var_type tIDENTIFIER '=' block_expression
   27 qualifier: tPUBLIC .

    tVAR  shift, and go to state 8

    $default  reduce using rule 27 (qualifier)

    var_type  go to state 21


State 8

    4 var_type: tVAR .

    $default  reduce using rule 4 (var_type)


State 9

   31 data_type: '[' . data_type ']'
   34 void_type: '[' . void_type ']'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '['           shift, and go to state 9

    data_type  go to state 22
    void_type  go to state 23
    func_type  go to state 19


State 10

    0 $accept: file . $end

    $end  shift, and go to state 24


State 11

   11 variable_decl: var_type . tIDENTIFIER '=' expression
   17 variable_decl_block: var_type . tIDENTIFIER '=' block_expression

    tIDENTIFIER  shift, and go to state 25


State 12

   19 variable_decls: variable_decl . ';'
   20               | variable_decl . ';' variable_decls

    ';'  shift, and go to state 26


State 13

   21 variable_decls: variable_decl_block .
   22               | variable_decl_block . variable_decls

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    '['           shift, and go to state 9

    '['       [reduce using rule 21 (variable_decls)]
    $default  reduce using rule 21 (variable_decls)

    var_type             go to state 11
    variable_decl        go to state 12
    variable_decl_block  go to state 13
    variable_decls       go to state 27
    qualifier            go to state 16
    data_type            go to state 17
    void_type            go to state 18
    func_type            go to state 19


State 14

   24 opt_variable_decls: variable_decls .

    $default  reduce using rule 24 (opt_variable_decls)


State 15

    1 file: opt_variable_decls . program

    tBEGIN  shift, and go to state 28

    program  go to state 29


State 16

    5 variable_decl: qualifier . data_type tIDENTIFIER
    7              | qualifier . data_type tIDENTIFIER '=' expression
   12              | qualifier . tIDENTIFIER '=' expression
   13 variable_decl_block: qualifier . data_type tIDENTIFIER '=' block_expression
   18                    | qualifier . tIDENTIFIER '=' block_expression

    tIDENTIFIER   shift, and go to state 30
    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '['           shift, and go to state 9

    data_type  go to state 31
    void_type  go to state 18
    func_type  go to state 19


State 17

    6 variable_decl: data_type . tIDENTIFIER
    8              | data_type . tIDENTIFIER '=' expression
   14 variable_decl_block: data_type . tIDENTIFIER '=' block_expression
   45 func_type: data_type . '<' types '>'
   46          | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 32
    '<'          shift, and go to state 33


State 18

   47 func_type: void_type . '<' types '>'
   48          | void_type . '<' '>'

    '<'  shift, and go to state 34


State 19

   32 data_type: func_type .

    $default  reduce using rule 32 (data_type)


State 20

    9 variable_decl: tFOREIGN var_type . tIDENTIFIER '=' expression
   15 variable_decl_block: tFOREIGN var_type . tIDENTIFIER '=' block_expression

    tIDENTIFIER  shift, and go to state 35


State 21

   10 variable_decl: tPUBLIC var_type . tIDENTIFIER '=' expression
   16 variable_decl_block: tPUBLIC var_type . tIDENTIFIER '=' block_expression

    tIDENTIFIER  shift, and go to state 36


State 22

   31 data_type: '[' data_type . ']'
   45 func_type: data_type . '<' types '>'
   46          | data_type . '<' '>'

    '<'  shift, and go to state 33
    ']'  shift, and go to state 37


State 23

   34 void_type: '[' void_type . ']'
   47 func_type: void_type . '<' types '>'
   48          | void_type . '<' '>'

    '<'  shift, and go to state 34
    ']'  shift, and go to state 38


State 24

    0 $accept: file $end .

    $default  accept


State 25

   11 variable_decl: var_type tIDENTIFIER . '=' expression
   17 variable_decl_block: var_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 39


State 26

   19 variable_decls: variable_decl ';' .
   20               | variable_decl ';' . variable_decls

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    '['           shift, and go to state 9

    '['       [reduce using rule 19 (variable_decls)]
    $default  reduce using rule 19 (variable_decls)

    var_type             go to state 11
    variable_decl        go to state 12
    variable_decl_block  go to state 13
    variable_decls       go to state 40
    qualifier            go to state 16
    data_type            go to state 17
    void_type            go to state 18
    func_type            go to state 19


State 27

   22 variable_decls: variable_decl_block variable_decls .

    $default  reduce using rule 22 (variable_decls)


State 28

    2 program: tBEGIN . block tEND

    '{'  shift, and go to state 41

    block  go to state 42


State 29

    1 file: opt_variable_decls program .

    $default  reduce using rule 1 (file)


State 30

   12 variable_decl: qualifier tIDENTIFIER . '=' expression
   18 variable_decl_block: qualifier tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 43


State 31

    5 variable_decl: qualifier data_type . tIDENTIFIER
    7              | qualifier data_type . tIDENTIFIER '=' expression
   13 variable_decl_block: qualifier data_type . tIDENTIFIER '=' block_expression
   45 func_type: data_type . '<' types '>'
   46          | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 44
    '<'          shift, and go to state 33


State 32

    6 variable_decl: data_type tIDENTIFIER .
    8              | data_type tIDENTIFIER . '=' expression
   14 variable_decl_block: data_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 45

    $default  reduce using rule 6 (variable_decl)


State 33

   45 func_type: data_type '<' . types '>'
   46          | data_type '<' . '>'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '>'           shift, and go to state 46
    '['           shift, and go to state 9

    data_type  go to state 47
    void_type  go to state 18
    types      go to state 48
    func_type  go to state 19


State 34

   47 func_type: void_type '<' . types '>'
   48          | void_type '<' . '>'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    '>'           shift, and go to state 49
    '['           shift, and go to state 9

    data_type  go to state 47
    void_type  go to state 18
    types      go to state 50
    func_type  go to state 19


State 35

    9 variable_decl: tFOREIGN var_type tIDENTIFIER . '=' expression
   15 variable_decl_block: tFOREIGN var_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 51


State 36

   10 variable_decl: tPUBLIC var_type tIDENTIFIER . '=' expression
   16 variable_decl_block: tPUBLIC var_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 52


State 37

   31 data_type: '[' data_type ']' .

    $default  reduce using rule 31 (data_type)


State 38

   34 void_type: '[' void_type ']' .

    $default  reduce using rule 34 (void_type)


State 39

   11 variable_decl: var_type tIDENTIFIER '=' . expression
   17 variable_decl_block: var_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 64

    func_def          go to state 65
    block_expression  go to state 66
    expression        go to state 67
    lvalue            go to state 68
    integer           go to state 69
    real              go to state 70
    string            go to state 71


State 40

   20 variable_decls: variable_decl ';' variable_decls .

    $default  reduce using rule 20 (variable_decls)


State 41

    3 block: '{' . opt_variable_decls opt_instructions '}'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tFOREIGN      shift, and go to state 5
    tUSE          shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tVAR          shift, and go to state 8
    '['           shift, and go to state 9

    '['       [reduce using rule 23 (opt_variable_decls)]
    $default  reduce using rule 23 (opt_variable_decls)

    var_type             go to state 11
    variable_decl        go to state 12
    variable_decl_block  go to state 13
    variable_decls       go to state 14
    opt_variable_decls   go to state 72
    qualifier            go to state 16
    data_type            go to state 17
    void_type            go to state 18
    func_type            go to state 19


State 42

    2 program: tBEGIN block . tEND

    tEND  shift, and go to state 73


State 43

   12 variable_decl: qualifier tIDENTIFIER '=' . expression
   18 variable_decl_block: qualifier tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 64

    func_def          go to state 65
    block_expression  go to state 74
    expression        go to state 75
    lvalue            go to state 68
    integer           go to state 69
    real              go to state 70
    string            go to state 71


State 44

    5 variable_decl: qualifier data_type tIDENTIFIER .
    7              | qualifier data_type tIDENTIFIER . '=' expression
   13 variable_decl_block: qualifier data_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 76

    $default  reduce using rule 5 (variable_decl)


State 45

    8 variable_decl: data_type tIDENTIFIER '=' . expression
   14 variable_decl_block: data_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 64

    func_def          go to state 65
    block_expression  go to state 77
    expression        go to state 78
    lvalue            go to state 68
    integer           go to state 69
    real              go to state 70
    string            go to state 71


State 46

   46 func_type: data_type '<' '>' .

    $default  reduce using rule 46 (func_type)


State 47

   35 types: data_type .
   45 func_type: data_type . '<' types '>'
   46          | data_type . '<' '>'

    '<'  shift, and go to state 33

    $default  reduce using rule 35 (types)


State 48

   36 types: types . ',' data_type
   37      | types . ',' void_type
   45 func_type: data_type '<' types . '>'

    '>'  shift, and go to state 79
    ','  shift, and go to state 80


State 49

   48 func_type: void_type '<' '>' .

    $default  reduce using rule 48 (func_type)


State 50

   36 types: types . ',' data_type
   37      | types . ',' void_type
   47 func_type: void_type '<' types . '>'

    '>'  shift, and go to state 81
    ','  shift, and go to state 80


State 51

    9 variable_decl: tFOREIGN var_type tIDENTIFIER '=' . expression
   15 variable_decl_block: tFOREIGN var_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 64

    func_def          go to state 65
    block_expression  go to state 82
    expression        go to state 83
    lvalue            go to state 68
    integer           go to state 69
    real              go to state 70
    string            go to state 71


State 52

   10 variable_decl: tPUBLIC var_type tIDENTIFIER '=' . expression
   16 variable_decl_block: tPUBLIC var_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 64

    func_def          go to state 65
    block_expression  go to state 84
    expression        go to state 85
    lvalue            go to state 68
    integer           go to state 69
    real              go to state 70
    string            go to state 71


State 53

  109 integer: tINTEGER .

    $default  reduce using rule 109 (integer)


State 54

  110 real: tREAL .

    $default  reduce using rule 110 (real)


State 55

  101 lvalue: tIDENTIFIER .

    $default  reduce using rule 101 (lvalue)


State 56

  111 string: tSTRING .

    $default  reduce using rule 111 (string)


State 57

   94 expression: tNOT . expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 86

    expression  go to state 87
    lvalue      go to state 68
    integer     go to state 69
    real        go to state 70
    string      go to state 71


State 58

   95 expression: tINPUT .

    $default  reduce using rule 95 (expression)


State 59

   76 expression: tNULL .

    $default  reduce using rule 76 (expression)


State 60

   97 expression: tSIZEOF . '(' expression ')'

    '('  shift, and go to state 88


State 61

   93 expression: '+' . expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 86

    expression  go to state 89
    lvalue      go to state 68
    integer     go to state 69
    real        go to state 70
    string      go to state 71


State 62

   92 expression: '-' . expression

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 86

    expression  go to state 90
    lvalue      go to state 68
    integer     go to state 69
    real        go to state 70
    string      go to state 71


State 63

   99 expression: '[' . expression ']'

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '['          shift, and go to state 63
    '('          shift, and go to state 86

    expression  go to state 91
    lvalue      go to state 68
    integer     go to state 69
    real        go to state 70
    string      go to state 71


State 64

   41 func_def: '(' . ')' tARROW data_type ':' block
   42         | '(' . args ')' tARROW data_type ':' block
   43         | '(' . ')' tARROW tVOID_TYPE ':' block
   44         | '(' . args ')' tARROW tVOID_TYPE ':' block
   98 expression: '(' . expression ')'
  103 lvalue: '(' . expression ')' '[' expression ']'

    tINTEGER      shift, and go to state 53
    tREAL         shift, and go to state 54
    tIDENTIFIER   shift, and go to state 55
    tSTRING       shift, and go to state 56
    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 4
    tNOT          shift, and go to state 57
    tINPUT        shift, and go to state 58
    tNULL         shift, and go to state 59
    tSIZEOF       shift, and go to state 60
    '+'           shift, and go to state 61
    '-'           shift, and go to state 62
    '['           shift, and go to state 92
    '('           shift, and go to state 86
    ')'           shift, and go to state 93

    data_type   go to state 94
    void_type   go to state 18
    arg         go to state 95
    args        go to state 96
    func_type   go to state 19
    expression  go to state 97
    lvalue      go to state 68
    integer     go to state 69
    real        go to state 70
    string      go to state 71


State 65

   72 block_expression: func_def .

    $default  reduce using rule 72 (block_expression)


State 66

   17 variable_decl_block: var_type tIDENTIFIER '=' block_expression .

    $default  reduce using rule 17 (variable_decl_block)


State 67

   11 variable_decl: var_type tIDENTIFIER '=' expression .
   79 expression: expression . '+' expression
   80           | expression . '-' expression
   81           | expression . '*' expression
   82           | expression . '/' expression
   83           | expression . '%' expression
   84           | expression . '<' expression
   85           | expression . tLE expression
   86           | expression . tEQ expression
   87           | expression . tGE expression
   88           | expression . '>' expression
   89           | expression . tNE expression
   90           | expression . tAND expression
   91           | expression . tOR expression
   96           | expression . '(' opt_expressions ')'
  104 lvalue: expression . '(' opt_expressions ')' '[' expression ']'

    tAND  shift, and go to state 98
    tOR   shift, and go to state 99
    tGE   shift, and go to state 100
    tLE   shift, and go to state 101
    tEQ   shift, and go to state 102
    tNE   shift, and go to state 103
    '>'   shift, and go to state 104
    '<'   shift, and go to state 105
    '+'   shift, and go to state 106
    '-'   shift, and go to state 107
    '*'   shift, and go to state 108
    '/'   shift, and go to state 109
    '%'   shift, and go to state 110
    '('   shift, and go to state 111

    $default  reduce using rule 11 (variable_decl)


State 68

   77 expression: lvalue .
   78           | lvalue . '=' comp_expression
  100           | lvalue . '?'
  102 lvalue: lvalue . '[' expression ']'

    '='  shift, and go to state 112
    '['  shift, and go to state 113
    '?'  shift, and go to state 114

    $default  reduce using rule 77 (expression)


State 69

   73 expression: integer .

    $default  reduce using rule 73 (expression)


State 70

   74 expression: real .

    $default  reduce using rule 74 (expression)


State 71

   75 expression: string .
  112 string: string . tSTRING

    tSTRING  shift, and go to state 115

    $default  reduce using rule 75 (expression)


State 72

    3 block: '{' opt_variable_decls . opt_instructions '}'

    tINTEGER     shift, and go to state 53
    tREAL        shift, and go to state 54
    tIDENTIFIER  shift, and go to state 55
    tSTRING      shift, and go to state 56
    tNOT         shift, and go to state 57
    tIF          shift, and go to state 116
    tWHILE       shift, and go to state 117
    tSTOP        shift, and go to state 118
    tAGAIN       shift, and go to state 119
    tWRITE       shift, and go to state 120
    tWRITELN     shift, and go to state 121
    tRETURN      shift, and go to state 122
    tINPUT       shift, and go to state 58
    tNULL        shift, and go to state 59
    tSIZEOF      shift, and go to state 60
    '+'          shift, and go to state 61
    '-'          shift, and go to state 62
    '{'          shift, and go to state 41
    '['          shift, and go to state 63
    '('          shift, and go to state 64

    $default  reduce using rule 49 (opt_instructions)

    block              go to state 123
    func_def           go to state 65
    opt_instructions   go to state 124
    instructions       go to state 125
    instruction        go to state 126
    block_instruction  go to state 127
    block_expression   go to state 128
    expression         go to state 129
    lvalue             go to state 68
    integer            go to state 69
    real               go to state 70
    string             go to state 71


State 73

    2 program: tBEGIN block tEND .

    $default  reduce using rule 2 (program)


State 74

   18 variable_decl_block: qualifier tIDENTIFIER '=' block_expression .

    $default  reduce using rule 18 (variable_decl_block)


State 75

   12 variable_decl: qualifier tIDENTIFIER '=' expression .
   79 expression: expression . '+' expression
   80           | expression . '-' expression
   81           | expression . '*' expression
   82           | expression . '/' expression
   83           | expression . '%' expression
   84           | expression . '<' expression
   85           | expression . tLE expression
   86           | expression . tEQ expression
   87           | expression . tGE expression
   88           | expression . '>' expression
   89           | expression . tNE expression
   90           | expression . tAND expression
   91           | expression . tOR expression
   96           | expression . '(' opt_expressions ')'
  104 lvalue: expression . '(' opt_expressions ')' '[' expression ']'
